--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,37 @@
-gunicorn
 audioread==3.0.1
 blinker==1.9.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.0
-colorama==0.4.6
-decorator==5.2.1
-et_xmlfile==2.0.0
+certifi
+cffi
+charset-normalizer
+click
+colorama
+decorator
+et_xmlfile
 Flask==3.1.1
-idna==3.10
-itsdangerous==2.2.0
+gunicorn
+idna
+itsdangerous
 Jinja2==3.1.6
-joblib==1.5.0
-lazy_loader==0.4
+joblib
+lazy_loader
 librosa==0.11.0
-llvmlite==0.44.0
-MarkupSafe==3.0.2
-msgpack==1.1.0
-numba==0.61.2
-numpy==2.2.5
-openpyxl==3.1.5
-packaging==25.0
-platformdirs==4.3.7
-pooch==1.8.2
-pycparser==2.22
+llvmlite
+MarkupSafe
+msgpack
+numba
+numpy
+openpyxl
+packaging
+platformdirs
+pooch
+pycparser
 pydub==0.25.1
-pygame==2.6.1
-requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.15.2
-soundfile==0.13.1
-soxr==0.5.0.post1
-threadpoolctl==3.6.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-Werkzeug==3.1.3
+requests
+scikit-learn
+scipy
+soundfile
+soxr
+threadpoolctl
+typing_extensions
+urllib3
+Werkzeug
